# prompt-analyzer

./: .gitignore  README.md  start.sh
backend/: data_service.py  main.py  pyproject.toml
data/: README.md  analysis_summary.json  analyze_data.py  expanded_prompts.jsonl  expanded_prompts_2.jsonl  prompts.jsonl  recent_prompts.jsonl  schema.json  schema_validation_report.md  simple_analysis.py  transform_data.py  validate_schema.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Analytics.tsx  LanguageSelector.tsx  PromptAnalyzer.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/translations/: en.ts  index.ts  ja.ts
